5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1800_2568.log
== TEST (2019-06-06 11:26:33) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(x, dtype=int)
d = "*"
t = t*2
for z in range(size(f)):
	d = "*"
	d = "*"*t
	print(d)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:26:43) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(t, dtype=int)
d = "*"
t = t*2
for z in range(size(f)):
	d = "*"
	d = "*"*t
	print(d)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:26:50) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(t, dtype=int)
d = "*"
t = t*2
for z in range(size(f)):
	d = "*"
	d = "*"*t
	print(d)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 19:36:14) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(t, dtype=int)
d = "*"
t = t*2
for z in range(size(f)):
	d = "*"
	d = "*"*t

	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 19:36:56) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(t, dtype=int)
d = "*"

for z in range(size(f)):
	d = "*"
	d = "*"*t
	print(d)
	
	
	
-- EXECUTION TIME:
1.01966
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
tamanho:***********
***********
***********
***********
***********
***********
***********
***********
***********
***********
***********
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
tamanho:*******************
*******************
*******************
*******************
*******************
*******************
*******************
*******************
*******************
*******************
*******************
*******************
*******************
*******************
*******************
*******************
*******************
*******************
*******************
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
tamanho:**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
**************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 19:36:56) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(t, dtype=int)
d = "*"

for z in range(size(f)):
	d = "*"
	d = "*"*t
	print(d)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 19:38:57) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(t, dtype=int)
d = "*"
e = "*"
g = ""
for z in range(size(f)):
	e = "*"
	d = "*"
	d = "*"*t
	e = "*"*t
	print(d, e)
	
	
	
-- EXECUTION TIME:
1.17673
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
*********** ***********
*********** ***********
*********** ***********
*********** ***********
*********** ***********
*********** ***********
*********** ***********
*********** ***********
*********** ***********
*********** ***********
*********** ***********
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
******************* *******************
******************* *******************
******************* *******************
******************* *******************
******************* *******************
******************* *******************
******************* *******************
******************* *******************
******************* *******************
******************* *******************
******************* *******************
******************* *******************
******************* *******************
******************* *******************
******************* *******************
******************* *******************
******************* *******************
******************* *******************
******************* *******************
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
************************** **************************
************************** **************************
************************** **************************
************************** **************************
************************** **************************
************************** **************************
************************** **************************
************************** **************************
************************** **************************
************************** **************************
************************** **************************
************************** **************************
************************** **************************
************************** **************************
************************** **************************
************************** **************************
************************** **************************
************************** **************************
************************** *
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 19:39:01) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(t, dtype=int)
d = "*"
e = "*"
g = ""
for z in range(size(f)):
	e = "*"
	d = "*"
	d = "*"*t
	e = "*"*t
	print(d, e)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 19:39:15) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(t, dtype=int)
d = "*"
e = "*"
g = ""
for z in range(size(f)):
	e = "*"
	d = "*"
	d = "*"*t
	e = "*"*t
	print(d,e)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 19:40:38) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(t, dtype=int)
d = "*"
e = "*"
g = ""
o = ""
for z in range(size(f)):
	e = "*"
	d = "*"
	g = g * o
	d = "*"*t
	e = "*"*t
	t = t - 1
	o = o +"oo"
	print(d,e)
	
	
	
-- EXECUTION TIME:
1.1736
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2568/main.py", line 12, in <module>
    g = g * o
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 19:40:44) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(t, dtype=int)
d = "*"
e = "*"
g = ""
o = ""
for z in range(size(f)):
	e = "*"
	d = "*"
	g = g * o
	d = "*"*t
	e = "*"*t
	t = t - 1
	o = o +"oo"
	print(d,o,e)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 19:41:01) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(t, dtype=int)
d = "*"
e = "*"
g = ""
o = ""
for z in range(size(f)):
	e = "*"
	d = "*"
	g = g + o
	d = "*"*t
	e = "*"*t
	t = t - 1
	o = o +"oo"
	print(d,o,e)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 19:41:14) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(t, dtype=int)
d = "*"
e = "*"
g = ""
o = ""
for z in range(size(f)):
	e = "*"
	d = "*"
	g = g + o
	d = "*"*t
	e = "*"*t
	t = t - 1
	o = o +"oo"
	print(d,o,e)
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 19:41:54) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(t, dtype=int)
d = "*"
e = "*"
g = ""
o = ""
for z in range(size(f)):
	e = "*"
	d = "*"
	g = g + o
	d = "*"*t
	e = "*"*t
	print(d,o,e)
	t = t - 1
	o = o +"oo"
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 19:42:32) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(t, dtype=int)
d = "*"
e = "*"
g = ""
o = ""
for z in range(size(f)):
	e = "*"
	d = "*"
	g = g + o
	d = "*"*t
	e = "*"*t
	print(d,o,e)
	t = t - 1
	o = o +"oo"
	
	
	
-- EXECUTION TIME:
1.27011
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
***********  ***********
********** oo **********
********* oooo *********
******** oooooo ********
******* oooooooo *******
****** oooooooooo ******
***** oooooooooooo *****
**** oooooooooooooo ****
*** oooooooooooooooo ***
** oooooooooooooooooo **
* oooooooooooooooooooo *
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
*******************  *******************
****************** oo ******************
***************** oooo *****************
**************** oooooo ****************
*************** oooooooo ***************
************** oooooooooo **************
************* oooooooooooo *************
************ oooooooooooooo ************
*********** oooooooooooooooo ***********
********** oooooooooooooooooo **********
********* oooooooooooooooooooo *********
******** oooooooooooooooooooooo ********
******* oooooooooooooooooooooooo *******
****** oooooooooooooooooooooooooo ******
***** oooooooooooooooooooooooooooo *****
**** oooooooooooooooooooooooooooooo ****
*** oooooooooooooooooooooooooooooooo ***
** oooooooooooooooooooooooooooooooooo **
* oooooooooooooooooooooooooooooooooooo *
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
**************************  **************************
************************* oo *************************
************************ oooo ************************
*********************** oooooo ***********************
********************** oooooooo **********************
********************* oooooooooo *********************
******************** oooooooooooo ********************
******************* oooooooooooooo *******************
****************** oooooooooooooooo ******************
***************** oooooooooooooooooo *****************
**************** oooooooooooooooooooo ****************
*************** oooooooooooooooooooooo ***************
************** oooooooooooooooooooooooo **************
************* oooooooooooooooooooooooooo *************
************ oooooooooooooooooooooooooooo ************
*********** oooooooooooooooooooooooooooooo ***********
********** oooooooooooooooooooooooooooooooo **********
********* oooooooooooooooooooooooooooooooooo *********
******** o
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 19:42:42) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(t, dtype=int)
d = "*"
e = "*"
g = ""
o = ""
for z in range(size(f)):
	e = "*"
	d = "*"
	g = g + o
	d = "*"*t
	e = "*"*t
	print(d o e)
	t = t - 1
	o = o +"oo"
	
	
	
-- ERROR:
File "XXXX", line 15
    print(d o e)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 19:42:51) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(t, dtype=int)
d = "*"
e = "*"
g = ""
o = ""
for z in range(size(f)):
	e = "*"
	d = "*"
	g = g + o
	d = "*"*t
	e = "*"*t
	print(d+o+e)
	t = t - 1
	o = o +"oo"
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 19:43:16) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(t, dtype=int)
d = "*"
e = "*"
g = ""
o = ""
for z in range(size(f)):
	e = "*"
	d = "*"
	g = g + o
	d = "*"*t
	e = "*"*t
	print(d+o+e)
	t = t - 1
	o = o +"oo"
	
	
	
-- EXECUTION TIME:
1.059
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo**
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:52:35) 
-- CODE:
from numpy import*

t = int(input("tamanho:"))
f = zeros(t, dtype=int)
d = "*"
e = "*"
g = ""
o = ""
for z in range(size(f)):
	e = "*"
	d = "*"
	d = "*"*t
	e = "*"*t
	print(d+o+e)
	t = t - 1
	o = o +"oo"
	
	
	
-- EXECUTION TIME:
0.783617
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo**
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
